--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -223,3 +223,20 @@ ul li {
 .projects-text a:hover {
     text-decoration: underline; /* Underline on hover */
 }
+
+/* responsinve to mobile screens */
+@media (max-width: 768px) {
+    .split-screen {
+      flex-direction: column;
+    }
+  
+    .left-panel {
+      flex: 0 0 15%; /* 30% of the total height, doesn't grow or shrink */
+      max-height: 30vh; /* Adjust if needed */
+    }
+  
+    .right-panel {
+      flex: 1; /* Takes the remaining space */
+      max-height: 70vh; /* Adjust if needed */
+    }
+}
