--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -147,6 +147,7 @@ h1 {
 
 .projects-text {
   color: #33ff33; /* Green text */
+  background-color: #161616;
   transition: background-color 0.3s, color 0.3s; /* Smooth transition for hover effect */
 }
 .projects-text:hover {
@@ -226,17 +227,36 @@ ul li {
 
 /* responsinve to mobile screens */
 @media (max-width: 768px) {
-    .split-screen {
-      flex-direction: column;
-    }
+  .search-container {
+    display: none; /* Hides the search container on small screens */
+  }
+
+  .larger-text {
+    display: none;
+  }
+
+  .split-screen {
+    flex-direction: column;
+  }
   
-    .left-panel {
-      flex: 0 0 15%; /* 30% of the total height, doesn't grow or shrink */
-      max-height: 30vh; /* Adjust if needed */
-    }
+  .left-panel {
+    flex: 0 0 15%; /* 30% of the total height, doesn't grow or shrink */
+    max-height: 30vh; /* Adjust if needed */
+    border-bottom: 1px solid #33ff33; /* Adds a horizontal line at the bottom */
+  }
+
+  .left-panel::after {
+    content: ''; /* Required for pseudo-elements */
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0; /* Position at the bottom of the left-panel */
+    height: 1px; /* Height of the horizontal line */
+    background-color: #33ff33; /* Color of the line, adjust as needed */
+  }
   
-    .right-panel {
-      flex: 1; /* Takes the remaining space */
-      max-height: 70vh; /* Adjust if needed */
-    }
+  .right-panel {
+    flex: 1; /* Takes the remaining space */
+    max-height: 70vh; /* Adjust if needed */
+  }
 }
