--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -40,8 +40,8 @@
 }
 
 h2 a, h3 a, h4 a, h5 a {
-    color: inherit; /* Sets the color to the inherited value from parent elements */
-    text-decoration: none; /* Removes underlining from links */
+    color: inherit; 
+    text-decoration: none; 
 }
 
 pre {
@@ -50,20 +50,20 @@ pre {
     padding: 10px;
     border-radius: 4px;
     text-align: left;
-    white-space: pre-wrap;       /* Since CSS 2.1 */
-    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
-    white-space: -pre-wrap;      /* Opera 4-6 */
-    white-space: -o-pre-wrap;    /* Opera 7 */
-    word-wrap: break-word;       /* Internet Explorer 5.5+ */
+    white-space: pre-wrap;       
+    white-space: -moz-pre-wrap;  
+    white-space: -pre-wrap;      
+    white-space: -o-pre-wrap;    
+    word-wrap: break-word;       
 }
 
 .larger-text {
-  font-size: 30px;
+    font-size: 30px;
 }
 
 .text-with-scanlines {
     position: relative;
-    color: #33ff33; /* Example text color */
+    color: #33ff33; 
 }
 
 .text-with-scanlines::after {
@@ -79,7 +79,7 @@ pre {
         rgba(0, 0, 0, 0.5) 1.5px,
         transparent 2px
     );
-    pointer-events: none; /* Allows clicks to pass through */
+    pointer-events: none; 
 }
 
 body, html {
@@ -109,111 +109,115 @@ img {
 }
 
 h1 {
-    background-color: #33ff33; /* Green background */
-    color: black; /* Inverted text color */
+    background-color: #33ff33; 
+    color: black; 
     text-align: center;
-    width: 100%; /* Full width of the container */
-    padding: 10px 0; /* Add some padding for better visual appearance */
-    margin: 0; /* Remove default margin */
+    width: 100%; 
+    padding: 10px 0; 
+    margin: 0; 
     animation: crt-flicker-title 1s linear 30s infinite;
 }
 
 .categories-container {
-  padding-top: 25px;
-  padding-bottom: 25px;
-  display: flex;
-  justify-content: center; 
-  align-items: center; 
-  flex-wrap: wrap; 
-  gap: 20px; 
+    padding-top: 25px;
+    padding-bottom: 25px;
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+    flex-wrap: wrap; 
+    gap: 20px; 
 }
 
 .center-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  height: 100vh; /* Sets the height of the container to the full viewport height */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    height: 100vh; 
 }
 
 .split-screen {
-  display: flex;
-  width: 100%;
-  align-items: flex-start;
-  height: 100vh; /* Adjust based on the height of your header */
-  align-items: stretch; /* Stretches the child elements to fill the container */
+    display: flex;
+    width: 100%;
+    align-items: flex-start;
+    height: 100vh; 
+    align-items: stretch; 
 }
 
 .left-panel, .right-panel {
-  flex: 1;
-  padding: 20px;
-  max-height: 90vh;
-  overflow-y: auto;
+    flex: 1;
+    padding: 20px;
+    max-height: 90vh;
+    overflow-y: auto;
 }
 .left-panel::-webkit-scrollbar {
     width: 0px;
 }
 .left-panel::-webkit-scrollbar-track {
-  background: transparent;
+    background: transparent;
 }
 .left-panel::-webkit-scrollbar-thumb {
-  background: #888; 
-  border-radius: 6px;
+    background: #888; 
+    border-radius: 6px;
 }
 .right-panel::-webkit-scrollbar {
     width: 0px;
 }
 .right-panel::-webkit-scrollbar-track {
-  background: transparent;
+    background: transparent;
 }
 .right-panel::-webkit-scrollbar-thumb {
-  background: #888; 
-  border-radius: 6px;
+    background: #888; 
+    border-radius: 6px;
 }
 
 .left-panel {
-  border-right: 1px solid #33ff33; /* Thin line dividing the two segments */
+    border-right: 5px solid #33ff33; 
 }
 
 .category-text {
-  color: #33ff33; /* Green text */
-  background-color: #161616;
-  transition: background-color 0.3s, color 0.3s; /* Smooth transition for hover effect */
-  width: 100px;
+    color: #33ff33; 
+    background-color: #161616;
+    transition: background-color 0.3s, color 0.3s; 
+    width: 100px;
 }
 .category-text:hover {
-    background-color: #33ff33; /* Green background on hover */
-    color: black; /* Inverted text color on hover */
+    background-color: #33ff33; 
+    color: black; 
     animation: initialRapidFlicker 0.5s 1, hoverFlicker 0.5s infinite;
-    animation-delay: 0s, 0.2s; /* Delay the regular flicker until the initial one completes */
+    animation-delay: 0s, 0.2s; 
+}
+.category-text-clicked {
+    color: black;
+    background-color: #33ff33;
 }
 
 .projects-text {
-  color: #33ff33; /* Green text */
-  background-color: #161616;
-  transition: background-color 0.3s, color 0.3s; /* Smooth transition for hover effect */
+    color: #33ff33; 
+    background-color: #161616;
+    transition: background-color 0.3s, color 0.3s; 
 }
 .projects-text:hover {
-    background-color: #33ff33; /* Green background on hover */
-    color: black; /* Inverted text color on hover */
+    background-color: #33ff33; 
+    color: black; 
     animation: initialRapidFlicker 0.5s 1, hoverFlicker 0.5s infinite;
-    animation-delay: 0s, 0.2s; /* Delay the regular flicker until the initial one completes */
+    animation-delay: 0s, 0.2s; 
 }
 
 .center-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
 }
 
 ul {
-  list-style-type: none;
-  padding: 0;
+    list-style-type: none;
+    padding: 0;
 }
 
 ul li {
-  margin: 0 auto;
+    margin: 0 auto;
 }
 
 .search-container {
@@ -230,7 +234,7 @@ ul li {
 }
 
 .blinking-cursor {
-  padding-right: 10px;
+    padding-right: 10px;
 }
 
 .blinking-cursor, .blinking-pipe {
@@ -245,12 +249,12 @@ ul li {
     height: 100%;
     background: none;
     border: none;
-    color: transparent; /* Ensures text isn't visible */
+    color: transparent; 
     font-family: 'Courier New', monospace;
     outline: none;
     padding: 10px;
     z-index: 1;
-    opacity: 0; /* Makes the input effectively invisible */
+    opacity: 0; 
 }
 
 
@@ -260,18 +264,19 @@ ul li {
 }
 
 .projects-text a, .projects-text a:hover {
-    color: #33ff33; /* Green text color */
-    text-decoration: none; /* No underline by default */
+    color: #33ff33; 
+    text-decoration: none; 
 }
 
 .projects-text a:hover {
-    text-decoration: underline; /* Underline on hover */
+    text-decoration: underline; 
 }
 
 /* responsinve to mobile screens */
+/* Hides the search container on small screens */
 @media (max-width: 768px) {
   .search-container {
-    display: none; /* Hides the search container on small screens */
+    display: none; 
   }
 
   .larger-text {
@@ -284,7 +289,7 @@ ul li {
   
   .left-panel {
     flex: 0 0 15%; /* 30% of the total height, doesn't grow or shrink */
-    max-height: 30vh; /* Adjust if needed */
+    max-height: 30vh; 
     border-bottom: 1px solid #33ff33; /* Adds a horizontal line at the bottom */
   }
 
@@ -295,11 +300,11 @@ ul li {
     right: 0;
     bottom: 0; /* Position at the bottom of the left-panel */
     height: 1px; /* Height of the horizontal line */
-    background-color: #33ff33; /* Color of the line, adjust as needed */
+    background-color: #33ff33; /* Color of the line */
   }
   
   .right-panel {
     flex: 1; /* Takes the remaining space */
-    max-height: 70vh; /* Adjust if needed */
+    max-height: 70vh; 
   }
 }
