--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -1,5 +1,11 @@
 /* General mobile adjustments for blog pages */
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body, html {
     height: auto; /* Let the body grow with content */
     margin: 0;
