--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -16,6 +16,7 @@ body, html {
     animation: flicker 3s infinite;
     font-size: 20px;
     overflow: auto; /* Allow scrolling */
+    padding-left: 50px;
 }
 
 img {
